[gd_scene load_steps=7 format=2]

[ext_resource path="res://Bot/circle.png" type="Texture" id=1]
[ext_resource path="res://Bot/Bot.gd" type="Script" id=2]
[ext_resource path="res://Bot/arrow.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 22.907

[sub_resource type="CircleShape2D" id=3]
radius = 71.6014

[node name="Bot" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.307466, 0.307466 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="EmergencyArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EmergencyArea"]
shape = SubResource( 2 )

[node name="GettingCloseArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GettingCloseArea"]
shape = SubResource( 3 )

[node name="Arrow" type="Sprite" parent="."]
z_index = -2
texture = ExtResource( 3 )
centered = false
offset = Vector2( 0, -32 )

[connection signal="body_entered" from="EmergencyArea" to="." method="_on_EmergencyArea_body_entered"]
[connection signal="body_exited" from="EmergencyArea" to="." method="_on_EmergencyArea_body_exited"]
[connection signal="body_entered" from="GettingCloseArea" to="." method="_on_GettingCloseArea_body_entered"]
[connection signal="body_exited" from="GettingCloseArea" to="." method="_on_GettingCloseArea_body_exited"]
